# sptest

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-publish.yaml  test.yaml
sample/: config.yaml
sptest/: __main__.py  config.py  repository.py
tests/: test_sptest.py
